kubernetes/deployment-model.yaml
apiVersion: v1

# Kubernetes Service
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: model
  name: model
spec:
  ports:
    - name: http
      port: 88
      targetPort: 88
  selector:
    app.kubernetes.io/name: model
  type: ClusterIP

---
# Kubernetes Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: model
  name: model
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: model
  template:
    metadata:
      labels:
        app.kubernetes.io/name: model
    spec:
      imagePullSecrets:
        - name: registry-credentials
      containers:
        - env:
          image: registry.gitlab.com/data-terrae/projects/captchacracker/captcha-cracker-model:latest
          imagePullPolicy: Always
          name: model-container
          ports:
            - containerPort: 88
              name: http
              protocol: TCP
