kubernetes/deployment-webapp.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: webapp-svc
  name: webapp-svc
spec:
  ports:
    - name: http
      port: 8504
      targetPort: 8504
  selector:
    app.kubernetes.io/name: webapp-svc
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: webapp
  name: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: webapp
  template:
    metadata:
      labels:
        app.kubernetes.io/name: webapp
    spec:
      imagePullSecrets:
        - name: registry-credentials
      containers:
        - env:
          image: registry.gitlab.com/data-terrae-airel-quetin/airlog/gateway:1.0.0-SNAPSHOT
          imagePullPolicy: Always
          name: webapp-container
          ports:
            - containerPort: 8504
              name: http
              protocol: TCP
