kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: captcha-cracker-io
  namespace: captcha-cracker
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - captchacracker.data-cafe.io
    secretName: captchacracker-secret-io-tls
  rules:
  - host: captchacracker.data-cafe.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp
            port:
              number: 8504
